[tool.poetry]
name = "ssql"
version = "0.1.0"
description = ""
authors = ["olga <bachisheo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# `nitpick` specific configuration.
# `nitpick` ensures that you have the same configuration
# in your own project.

# Make sure to install it with:
# `pip install nitpick`

# See:
# https://wemake-python-styleguide.rtfd.io/en/latest/pages/usage/integrations/nitpick

# This file is included into wemake-preset.

["setup.cfg".mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true