[tool.poetry]
name = "ssql"
version = "0.1.0"
description = ""
authors = ["olga <bachisheo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = "setuptools>=61.0.0"
backend = "setuptools.build_meta"


[tool.poetry.dev-dependencies]

mypy = "^1.3.0"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
)/
'''


[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true


pytest = "^7.3"
psycopg2="^2.9.6"
docker="^6.1.3"


[ssql_postgres]
host = "172.17.0.2"
database = "postgres"
user = "postgres"
password = "123"
